[package]
name = "bossy"
version = "0.1.2"
authors = ["Francesca Lovebloom <francesca@brainiumstudios.com>"]
edition = "2018"
description = "Opinionated convenience wrappers for `std::process::Command` and friends."
documentation = "https://docs.rs/bossy"
repository = "https://github.com/BrainiumLLC/bossy"
readme = "README.md"
keywords = ["process", "shell", "command"]
categories = ["rust-patterns"]
license = "Apache-2.0/MIT"

[dependencies]
log = "0.4.11"

[dev-dependencies]
simple_logger = "1.6.0"
