[package]
name = "bossy"
version = "0.2.1"
authors = ["Brainium Studios LLC", "Francesca Lovebloom <francesca@brainiumstudios.com>"]
edition = "2018"
description = "Opinionated convenience wrappers for `std::process::Command` and friends."
documentation = "https://docs.rs/bossy"
repository = "https://github.com/BrainiumLLC/bossy"
readme = "README.md"
keywords = ["process", "shell", "command"]
categories = ["rust-patterns"]
license = "Apache-2.0/MIT"

[dependencies]
log = "0.4.11"

[target.'cfg(unix)'.dependencies]
libc = "0.2.81"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winbase"] }

[dev-dependencies]
simple_logger = "1.11.0"
